<resources>
    <string name="app_name">Find Me Masjid</string>
    <string name="app_short_desc">\n Try out this application to find Masjid around you or anywhere around the world. \n </string>
    <string name="app_url" translatable="false">https://play.google.com/store/apps/details?id=com.apps.genutek.find_me_masjid</string>
    <string name="Login">Login</string>
    <string name="okay">Okay</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo_image_desc" translatable="false">App Logo inspired by Freepik</string>
    <string name="signup_text">Don\'t have an account yet? Signup</string>
    <string name="share_popup_title">choose one</string>
    <string name="title_activity_maps">Map</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="name">Name</string>
    <string name="signup">SignUp</string>
    <string name="country">Country</string>
    <string name="map_search_hint">Find by address</string>
    <string name="search">Search</string>
    <string name="marker_icon_desc" translatable="false">Icon for marker info</string>
    <string name="infoWindow_navigate">Click here to navigate to this masjid</string>
    <string name="about">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="share">Share this App</string>
    <string name="support_me">Support Us</string>
    <string name="thank_you">Thank you</string>
    <string name="tutorial_image">tutorial</string>
    <string name="app_ads_id" translatable="false">ca-app-pub-4952820368276019~2433897285</string>
    <string name="fetching_coordinates">Getting Location from GPS</string>
    <string name="enable_gps_message">Your GPS is disabled, do you want to enable your GPS ?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="requested_location">Location</string>
    <string name="about_us_message">
        About Us:
        \n
        \n We are a group of young and enthusiastic developers. At Genutek, we aim to create good, creative and effective applications for mobile and desktop platforms.
        \n Genutek is a new startup which was established on 1st January 2017 with just $200 investment, and Find Me Masjid is our first live application on android platform.
        \n We are doing our ultimate best to add more features to this application and develop more application in near future.
        \n We need your encouragement, contribution and support to keep us moving forward.
        \n Please remember us in your prayers. JazakAllah Khair.
        \n
        \n
        \n Please share your valuable comments, suggestions or feedback at..
        \n atifahmed0276@gmail.com
    </string>

    <string name="feedback_message">
        \n Your comments and suggestions holds a great value for us. They drive us in the right direction of what you want.
        So, please share your valuable comments, suggestions or feedback at..
        \n
        \n
        atifahmed0276@gmail.com
        \n
    </string>

    <string name="location_found_error">
        Problem occurred while finding location. Make sure location is correct.\n
        Provide more details of your location. e.g. Aal Al Bait, Damascus
    </string>
    <string name="genutek_logo_image_desc" translatable="false">genutek logo image</string>
    <string name="ads_free_title">Earn support points </string>
    <string name="support_icon_img_desc" translatable="false">supports points icon by freepik</string>
    <string name="button_support_page">Go to support page</string>
    <string name="earn_points_explain">watch ads and get 1 support point</string>
    <string name="play_button_desc" translatable="false">play_button_desc</string>
    <string name="button_text_10_support">20 Support</string>
    <string name="button_text_25_support">50 Support</string>
    <string name="button_text_100_support">200 Support</string>
    <string name="button_text_50_support">100 Support</string>
    <string name="text_goto_support_me">visit support page for more ways to contribute</string>
    <string name="watch_ads">Watch Ads</string>
    <string name="no_internet_connection">No Internet connection found. Active internet connection is required to find location.</string>
    <string name="no_ads_text">No Ads available to watch. Please again try later</string>
    <string name="thanks_for_purchase">Thanks a lot for your support.</string>
    <string name="Find_masjid_near_me">Find Masjid Near Me</string>
    <string name="support_us_description">Contribute to our cause by earning support points</string>
    <string name="intro_title">Thank you for downloading</string>
    <string name="intro_line_1"> A quick guide to use this application \n Find Me Masjid offers multiple ways to search Masjid </string>
    <string name="gps_search_desc">You can search masjid near to your location by tapping the GPS icon in tool bar - requires GPS</string>
    <string name="search_location_heading">1. Search by your location</string>
    <string name="search_address_heading">2. Search By address</string>
    <string name="search_tap_heading">3. Search By Tapping</string>
    <string name="search_drag_heading">4. Search By Dragging Marker</string>
    <string name="intro_desc_2">Find Me Masjid provides multiple ways to search masjid around you</string>
    <string name="search_tap_desc">Tap and hold anywhere on the map to find masjid around that location.</string>
    <string name="searc_drag_desc">You can hold and drag the location marker any where on the map to find masjid around that location.</string>
    <string name="search_address_desc">You can search masjid any where around the globe by providing the address in the search box.</string>
    <string name="how_to_use">How to Use</string>
    <string name="add_masjid">Add Masjid</string>
    <string name="desc_img_add_masjid" translatable="false">image for Add Masjid Button</string>
    <string name="no_masjid_found">No Masjid found near your location.</string>
    <string name="search_add_masjid_heading">5. Add A New Masjid</string>
    <string name="search_add_masjid_desc">If you cannot find a masjid on map, you can add the masjid by clicking on add masjid button on the bottom right corner of the map.</string>
    <string name="add_masjid_address">Address</string>
    <string name="add_masjid_complete_address_of_masjid">Complete Address of Masjid</string>
    <string name="add_masjid_full_name_of_masjid">Full Name of Masjid</string>
    <string name="add_masjid_name_of_masjid">Name of Masjid</string>
    <string name="add_masjid_telephone_no_of_masjid">Telephone at Masjid (if any)</string>
    <string name="add_masjid_telephone_number">Telephone Number</string>
    <string name="add_masjid_lng_lat">Drag and place the blue marker at the exact location of masjid on the map. Zoom the map if needed. Press [Submit Button] to Add Masjid.</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
</resources>
