<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/background_repeat"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/tv_full_name_of_masjid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_masjid_full_name_of_masjid"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/text_masjid_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/add_masjid_name_of_masjid"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_complete_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_masjid_complete_address_of_masjid"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/text_masjid_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/add_masjid_address"
            android:inputType="textMultiLine"
            android:textAlignment="textStart"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_masjid_telephone_no_of_masjid"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/text_masjid_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/add_masjid_telephone_number"
            android:inputType="phone"
            android:textAlignment="textStart"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_okay"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/okay" />
    </LinearLayout>
</RelativeLayout>