<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:background="@drawable/background_repeat"
              android:orientation="vertical"
              android:layout_gravity="center">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/ads_free_support_icon"
        android:contentDescription="@string/support_icon_img_desc"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_support_score"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <TextView
        android:text="@string/support_us_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:textStyle="normal|italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_s_20"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/support_10_disabled"
            android:onClick="onClick_support_20"
            android:enabled="false"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_s_50"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/support_25_disabled"
            android:onClick="onClick_support_50"
            android:enabled="false"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/button_text_10_support"
            android:textAlignment="center"
            android:id="@+id/text_price_20"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/button_text_25_support"
            android:textAlignment="center"
            android:id="@+id/text_price_50"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_s_100"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/support_50_disabled"
            android:onClick="onClick_support_100"
            android:enabled="false"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_s_200"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/support_100_disabled"
            android:onClick="onClick_support_200"
            android:enabled="false"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/button_text_50_support"
            android:textAlignment="center"
            android:textSize="13sp"
            android:id="@+id/text_price_100"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/button_text_100_support"
            android:textAlignment="center"
            android:textSize="13sp"
            android:id="@+id/text_price_200"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/button_show_rewarded_ads"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:text="@string/watch_ads"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:text="@string/no_ads_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_no_ad"
            android:textAlignment="center"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earn_points_explain"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:textStyle="normal|italic"/>
    </LinearLayout>


</LinearLayout>
